--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -40,31 +40,48 @@
     </div>
     <div class="navbar-collapse collapse" id="briefs">
         <div class="container" id="hamburger-meat">
-            <div class="col-md-3 col-lg-3">
-                <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
-                <hr/>
-                <a class="carousel-link" id="map">Mapping America's Futures</a>
-                <!-- <a class="carousel-link" id="feature">What will America look like in 2030?</a> -->
-                <a href="http://www.urban.org/about/contact.cfm">Questions or Comments?<br/>Let us know.</a>
-            </div>
+
             <div class="col-md-3 col-lg-3">
                 <h1 class="dropdown-section-header">BLOG POSTS</h1>
                 <hr/>
-                <a href="http://blog.metrotrends.org/2014/10/states-charitable-red-blue-ones/">
-                  Which states are more charitable, red ones or blue ones?</a>
-                <a href="http://blog.metrotrends.org/2014/10/marriage-solution-income-inequality/">
-                  Is marriage a solution to income inequality?</a>
-                <a href="http://blog.metrotrends.org/2014/10/hurricane-sandy-havent-learned/">Hurricane Sandy: What we still haven’t learned</a>
-
-                <a href="http://blog.metrotrends.org/2014/10/data-action-breakthrough-estimating-nonprofit-employment/">Data in action: a breakthrough in estimating nonprofit employment</a>
+                <a href="http://blog.metrotrends.org/2014/06/future-americas-young-population/">
+                  The future of America’s young population
+                </a>
             </div>
             <div class="col-md-6 col-lg-6">
                 <h1 class="dropdown-section-header">RESEARCH</h1>
                 <hr/>
-                <a href="http://www.taxpolicycenter.org/publications/url.cfm?ID=109047">Municipal Debt: What Does It Buy and Who Benefits?</a>
-                <a href="http://www.urban.org/publications/413280.html">Is Bigger Better? The Implications of Health Care Provider Consolidation: An Interview with Atul Gawande</a>
-                <a href="http://www.urban.org/publications/413278.html">Small-Dollar Credit: Consumer Needs and Industry Challenges</a>
-                <a href="http://www.urban.org/publications/413279.html">Federal and State Policy Toward Association Health Plans in Oregon</a>
+                <a href="http://www.urban.org/publications/2000065.html">
+                  Scenarios for Regional Growth from 2010 to 2030
+                </a>
+
+                <a href="http://www.urban.org/publications/2000067.html">
+                  Children and Youth in an Aging America
+                </a>
+
+                <a href="http://www.urban.org/publications/2000066.html">
+                  Evolving Patterns in Diversity
+                </a>
+
+                <a href="http://www.urban.org/publications/2000068.html">
+                  The Labor Force in an Aging and Growing America
+                </a>
+
+                <a href="http://www.urban.org/publications/2000069.html">
+                  Methodology and Assumptions for Mapping America's Futures Project
+                </a>
+
+                <a href="http://www.urban.org/publications/2000070.html">
+                  2000-2010 Population Profiles: Atlanta, Las Vegas, Washington, DC, and  Youngstown
+                </a>
+
+            </div>
+            <div class="col-md-3 col-lg-3">
+                <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
+                <hr/>
+                <a href="http://datatools.urban.org/features/mapping-americas-futures/#map">Tool: Population Projections</a>
+                <!-- <a href="http://datatools.urban.org/features/mapping-americas-futures/#feature">Feature: A Tour of America’s Futures</a> -->
+                <a href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
             </div>
         </div>
     </div>
