--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -11,10 +11,13 @@
 
     <!-- urban scripts -->
     <script src="src/projections.js"></script>
+    <script src="src/getTextBBox.js"></script>
+    <script src="src/dataParser.js"></script>
     <script src="src/path.js"></script>
     <script src="src/progress.js"></script>
     <script src="src/select.js"></script>
     <script src="src/dropdown.js"></script>
+    <script src="src/legend.js"></script>
     <script src="src/mapper.js"></script>
     <script src="src/lineChart.js"></script>
     <script src="src/barChart.js"></script>
