--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -56,7 +56,7 @@
 
                 <div class="col-sm-3 border-group no-right-pad sm-no-pad" id="year-change-group">
 
-                  <div class="settings-header">Change years: </div>
+                  <div class="settings-header">Choose years: </div>
 
                   <div id="year-select-container">
                     <label class="select-label">From</label>
@@ -67,7 +67,7 @@
 
                 </div>
 
-                <div class="col-sm-5 no-left-pad sm-no-pad">
+                <div class="col-sm-8 no-left-pad sm-no-pad">
                   <label class="select-label" id="boundary_label">Boundary</label>
 
                   <br/>
@@ -79,12 +79,12 @@
                     </div>
                     <div class="btn-group btn-group-sm">
                       <button type="button" class="btn settings-button active" id="czones">
-                        CZs</button>
+                        COMMUTING ZONES</button>
                     </div>
                   </div>
                 </div>
 
-                <div class="col-sm-7" id="boundary-info">
+                <div class="col-sm-4" id="boundary-info">
                   The map divides the United States into 740 commuting zones&mdash;places connected by local economies.
                 </div>
 
@@ -121,7 +121,7 @@
 
         <div class="row">
           <div class="col-md-12">
-            <div id="map_container"></div>
+            <div id="map_container" oncontextmenu="return false"></div>
           </div>
         </div>
 
@@ -278,7 +278,9 @@
           </div>
           <div class="col-sm-3">
             <h3>Questions? Let us know.</h3>
-            Share your feedback with researchers. AmericasFutures[at]urban.org  <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
+            Share your feedback with researchers. 
+            <a href="mailto:americasfutures@urban.org">AmericasFutures[at]urban.org</a>
+            <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
           </div>
         </div>
         </div>
