zoom wobble fixed!

--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -67,12 +67,12 @@
 
                 </div>
 
-                <div class="col-sm-8 no-left-pad sm-no-pad">
+                <div class="col-sm-7 no-left-pad sm-no-pad">
                   <label class="select-label" id="boundary_label">Boundary</label>
 
                   <br/>
 
-                  <div class="btn-group settings btn-group-justified" id="boundary">
+                  <div class="btn-group settings" id="boundary">
                     <div class="btn-group btn-group-sm">
                       <button type="button" class="btn settings-button" id="states">
                         STATES</button>
@@ -84,7 +84,7 @@
                   </div>
                 </div>
 
-                <div class="col-sm-4" id="boundary-info">
+                <div class="col-sm-5" id="boundary-info">
                   The map divides the United States into 740 commuting zones&mdash;places connected by local economies.
                 </div>
 
