--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -115,8 +115,8 @@
             <div class="col-md-3 col-lg-3">
                 <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
                 <hr/>
-                <a href="http://datatools.urban.org/features/mapping-americas-futures/#map">Tool: Population Projections</a>
-                <!-- <a href="http://datatools.urban.org/features/mapping-americas-futures/#feature">Feature: A Tour of America’s Futures</a> -->
+                <a id="map" class="carousel-link">Tool: Population Projections</a>
+                <!-- <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a> -->
                 <a href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
             </div>
         </div>
@@ -523,12 +523,12 @@
 
                 </div>
 
-                <div class="col-sm-8 no-left-pad sm-no-pad">
+                <div class="col-sm-7 no-left-pad sm-no-pad">
                   <label class="select-label" id="boundary_label">Boundary</label>
 
                   <br/>
 
-                  <div class="btn-group settings btn-group-justified" id="boundary">
+                  <div class="btn-group settings" id="boundary">
                     <div class="btn-group btn-group-sm">
                       <button type="button" class="btn settings-button" id="states">
                         STATES</button>
@@ -540,7 +540,7 @@
                   </div>
                 </div>
 
-                <div class="col-sm-4" id="boundary-info">
+                <div class="col-sm-5" id="boundary-info">
                   The map divides the United States into 740 commuting zones&mdash;places connected by local economies.
                 </div>
 
