--- a/app/css/controls.css
+++ b/app/css/controls.css
@@ -51,6 +51,22 @@ button.btn.settings-button.active {
   padding-bottom: 0px;
 }
 
+
+@media (min-width: 768px) {
+  #boundary button {
+    padding-left : 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (min-width: 1200px) {
+  #boundary button {
+    padding-left : 30px;
+    padding-right: 30px;
+  }
+}
+
+
 #boundary-info {
   font-style: italic;
   padding-left: 10px;
