--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -79,8 +79,8 @@
             <div class="col-md-3 col-lg-3">
                 <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
                 <hr/>
-                <a href="http://datatools.urban.org/features/mapping-americas-futures/#map">Tool: Population Projections</a>
-                <!-- <a href="http://datatools.urban.org/features/mapping-americas-futures/#feature">Feature: A Tour of America’s Futures</a> -->
+                <a id="map" class="carousel-link">Tool: Population Projections</a>
+                <!-- <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a> -->
                 <a href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
             </div>
         </div>
