--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -38,8 +38,8 @@
               A future with more births and longer lives looks very different from one with fewer births and high mortality. And migration—one of the most difficult forces to predict—can change areas rapidly, not just in sheer numbers, but also in terms of an area’s racial and ethnic makeup, its workers and tax base, its demand for housing and for government services, and, arguably, its character.
             </p>
 
-            <img data-src="images/yt_ga-sm.jpg" class="feature-image img-responsive img-rounded async">
-            <div class="photo-credits">AP/Amy Sancetta; Shutterstock</div>
+            <img data-src="images/ga_yt_sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">Top: Atanta, Shutterstock.  Bottom: Youngstown, AP/Amy Sancetta</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
