--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -67,7 +67,7 @@
 
                 </div>
 
-                <div class="col-sm-7 no-left-pad sm-no-pad">
+                <div class="col-sm-7 no-left-pad sm-no-pad" id="boundary-group">
                   <label class="select-label" id="boundary_label">Boundary</label>
 
                   <br/>
