--- a/app/views/index_dist.html
+++ b/app/views/index_dist.html
@@ -148,8 +148,8 @@
               A future with more births and longer lives looks very different from one with fewer births and high mortality. And migration—one of the most difficult forces to predict—can change areas rapidly, not just in sheer numbers, but also in terms of an area’s racial and ethnic makeup, its workers and tax base, its demand for housing and for government services, and, arguably, its character.
             </p>
 
-            <img data-src="images/yt_ga-sm.jpg" class="feature-image img-responsive img-rounded async">
-            <div class="photo-credits">AP/Amy Sancetta; Shutterstock</div>
+            <img data-src="images/ga_yt_sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">Top: Atanta, Shutterstock.  Bottom: Youngstown, AP/Amy Sancetta</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
@@ -508,7 +508,7 @@
 
                 </div>
 
-                <div class="col-sm-7 no-left-pad sm-no-pad">
+                <div class="col-sm-7 no-left-pad sm-no-pad" id="boundary-group">
                   <label class="select-label" id="boundary_label">Boundary</label>
 
                   <br/>
@@ -696,12 +696,12 @@
               <h6 class="credit-title">PROJECT DIRECTOR</h6>
               Rolf Pendall
               <h6 class="credit-title">RESEARCH</h6>
-              <div class="credit-name">Nan Marie Astone,</div>
-              <div class="credit-name">Steven Martin,</div>
-              <div class="credit-name">H. Elizabeth Peters,</div>
-              <div class="credit-name">Austin Nichols,</div>
-              <div class="credit-name">Kait Hildner,</div>
-              <div class="credit-name">Allison Stolte,</div>
+              <div class="credit-name">Nan Marie Astone, </div>
+              <div class="credit-name">Steven Martin, </div>
+              <div class="credit-name">H. Elizabeth Peters, </div>
+              <div class="credit-name">Austin Nichols, </div>
+              <div class="credit-name">Kait Hildner, </div>
+              <div class="credit-name">Allison Stolte, </div>
               <div class="credit-name">Pam Blumenthal</div>
             </div>
             <div class="col-sm-6">
