--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -7,25 +7,25 @@
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
-        <a href="http://www.urban.org">
+        <a target="_blank" href="http://www.urban.org">
             <img class="logo-image hidden-lg async" data-src="images/new_mark_U-01.png" />
         </a>
-        <a href="http://www.urban.org">
+        <a target="_blank" href="http://www.urban.org">
             <img class="logo-image hidden-xs hidden-sm hidden-md async" data-src="images/logo_revblue_trans.png" />
         </a>
         <span id="title-span" class="hidden-xs">MAPPING AMERICA'S FUTURES</span>
         <span id="hamburger-bun" class="height-adjust">
             <span id="share-container">
                 <span id="hidden-share">
-                <a href="http://twitter.com/intent/tweet?text=Interactive%3A%20Test%20possible%20scenarios%20for%20how%20the%20US%20population%20might%20change%20in%202020%20%26%202030%20http%3A%2F%2Furbn.is%2FAmericasFutures%20%23AmericasFutures">
+                <a target="_blank" href="http://twitter.com/intent/tweet?text=Interactive%3A%20Test%20possible%20scenarios%20for%20how%20the%20US%20population%20might%20change%20in%202020%20%26%202030%20http%3A%2F%2Furbn.is%2FAmericasFutures%20%23AmericasFutures">
                     <span id="twitter" class="nav-icon">
                         <i class="fa fa-twitter"></i>
                     </span>
                 </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://urbn.is/AmericasFutures">
+                <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://urbn.is/AmericasFutures">
                     <span id="facebook" class="nav-icon"><i class="fa fa-facebook"></i></span>
                 </a>
-                <a href="mailto:%20?Subject=New interactive from the Urban Institute&amp;Body=Hi! I thought you might be interested in this new interactive from the Urban Institute: &quot;Mapping America\'s Futures&quot; http://urbn.is/AmericasFutures">
+                <a target="_blank" href="mailto:%20?Subject=New interactive from the Urban Institute&amp;Body=Hi! I thought you might be interested in this new interactive from the Urban Institute: &quot;Mapping America\'s Futures&quot; http://urbn.is/AmericasFutures">
                     <span id="mail" class="nav-icon"><i class="fa fa-envelope-o"></i></span>
                 </a>
               </span>
@@ -44,34 +44,34 @@
             <div class="col-md-3 col-lg-3">
                 <h1 class="dropdown-section-header">BLOG POSTS</h1>
                 <hr/>
-                <a href="http://blog.metrotrends.org/2014/06/future-americas-young-population/">
+                <a target="_blank" href="http://blog.metrotrends.org/2014/06/future-americas-young-population/">
                   The future of America’s young population
                 </a>
             </div>
             <div class="col-md-6 col-lg-6">
                 <h1 class="dropdown-section-header">RESEARCH</h1>
                 <hr/>
-                <a href="http://www.urban.org/publications/2000065.html">
+                <a target="_blank" href="http://www.urban.org/publications/2000065.html">
                   Scenarios for Regional Growth from 2010 to 2030
                 </a>
 
-                <a href="http://www.urban.org/publications/2000067.html">
+                <a target="_blank" href="http://www.urban.org/publications/2000067.html">
                   Children and Youth in an Aging America
                 </a>
 
-                <a href="http://www.urban.org/publications/2000066.html">
+                <a target="_blank" href="http://www.urban.org/publications/2000066.html">
                   Evolving Patterns in Diversity
                 </a>
 
-                <a href="http://www.urban.org/publications/2000068.html">
+                <a target="_blank" href="http://www.urban.org/publications/2000068.html">
                   The Labor Force in an Aging and Growing America
                 </a>
 
-                <a href="http://www.urban.org/publications/2000069.html">
+                <a target="_blank" href="http://www.urban.org/publications/2000069.html">
                   Methodology and Assumptions for Mapping America's Futures Project
                 </a>
 
-                <a href="http://www.urban.org/publications/2000070.html">
+                <a target="_blank" href="http://www.urban.org/publications/2000070.html">
                   2000-2010 Population Profiles: Atlanta, Las Vegas, Washington, DC, and  Youngstown
                 </a>
 
@@ -81,7 +81,7 @@
                 <hr/>
                 <a id="map" class="carousel-link">Tool: Population Projections</a>
                 <!-- <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a> -->
-                <a href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
+                <a target="_blank" href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
             </div>
         </div>
     </div>
