--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -23,7 +23,7 @@
             </h4>
 
             <p>
-              These demographic shifts matter a great deal to states and local communities. Las Vegas is <a href="http://www.nytimes.com/2014/10/07/us/las-vegas-schools-groan-from-growing-pains.html?_r=4">scrambling to build enough schools</a> to accommodate the city’s recent population boom. Meanwhile, <a href="http://www.nytimes.com/2011/04/06/us/06detroit.html?adxnnl=1&adxnnlx=1415415623-fvDtnwTr1YCPakC2j+DNUg">Detroit is figuring out how to downsize wisely</a> to match a shrinking population that may shrink even more.
+              These demographic shifts matter a great deal to states and local communities. Las Vegas is <a target="_blank" href="http://www.nytimes.com/2014/10/07/us/las-vegas-schools-groan-from-growing-pains.html?_r=4">scrambling to build enough schools</a> to accommodate the city’s recent population boom. Meanwhile, <a target="_blank" href="http://www.nytimes.com/2011/04/06/us/06detroit.html?adxnnl=1&adxnnlx=1415415623-fvDtnwTr1YCPakC2j+DNUg">Detroit is figuring out how to downsize wisely</a> to match a shrinking population that may shrink even more.
             </p>
 
             <p>
@@ -31,7 +31,7 @@
             </p>
 
             <p>
-              The rates are all reasonable assumptions, <a href="http://www.urban.org/publications/2000069.html">based on historical trends</a>. In other words, it won’t show a future where no children are born and no one dies, but we could imagine a future where people move around more or birthrates fall by 20 percent. With the tool, people can explore several possible “what-if” scenarios—possible futures—and see how they’ll play out across the country.
+              The rates are all reasonable assumptions, <a target="_blank" href="http://www.urban.org/publications/2000069.html">based on historical trends</a>. In other words, it won’t show a future where no children are born and no one dies, but we could imagine a future where people move around more or birthrates fall by 20 percent. With the tool, people can explore several possible “what-if” scenarios—possible futures—and see how they’ll play out across the country.
             </p>
 
             <p>
@@ -57,7 +57,7 @@
             </div>
 
             <p>
-              To better understand how <a href="http://www.urban.org/publications/2000065.html ">population projections</a> can help cities and states plan for change, let’s look at two places on two different trajectories: Atlanta, Georgia, and Youngstown, Ohio.
+              To better understand how <a target="_blank" href="http://www.urban.org/publications/2000065.html ">population projections</a> can help cities and states plan for change, let’s look at two places on two different trajectories: Atlanta, Georgia, and Youngstown, Ohio.
             </p>
 
             <p>
@@ -159,7 +159,7 @@
             </p>
 
             <p>
-              Also, like Youngstown, Atlanta will see more people in the future <a href="http://www.urban.org/publications/2000068.html">who are not in the labor force</a>&mdash;not because working-age people are leaving, but as a natural consequence of a growing population. A share of working-age people in any area are likely to be unemployed, disabled and unable to work, or out of the labor force temporarily while going to college, raising a family, or taking care of an ailing relative. Even if that share stays the same as the population grows, the number of people outside the work force will also grow.
+              Also, like Youngstown, Atlanta will see more people in the future <a target="_blank" href="http://www.urban.org/publications/2000068.html">who are not in the labor force</a>&mdash;not because working-age people are leaving, but as a natural consequence of a growing population. A share of working-age people in any area are likely to be unemployed, disabled and unable to work, or out of the labor force temporarily while going to college, raising a family, or taking care of an ailing relative. Even if that share stays the same as the population grows, the number of people outside the work force will also grow.
             </p>
 
             <p>
@@ -190,13 +190,13 @@
               By 2030, the population of the United States age 65 and over will increase dramatically, putting pressure on health and long-term care services and government programs funded by a smaller base of taxpayers. Pick the average birth, death, and migration rates and Boise’s 65-and-over population goes up by 140 percent. Raleigh’s grows by 151 percent and Albuquerque’s by 111 percent.
             </p>
             <p>
-              This isn’t news. But the aging of America overshadows another equally important story: <a href="http://www.urban.org/publications/2000067.html ">the substantial number of young people</a> in every city and state who also rely on taxpayer investments. They’re the children of the Millennials, many of whom haven’t been born yet. And states and localities will need to invest in their education, health care, and other needs, even in the face of higher demand for services for the elderly.
+              This isn’t news. But the aging of America overshadows another equally important story: <a target="_blank" href="http://www.urban.org/publications/2000067.html ">the substantial number of young people</a> in every city and state who also rely on taxpayer investments. They’re the children of the Millennials, many of whom haven’t been born yet. And states and localities will need to invest in their education, health care, and other needs, even in the face of higher demand for services for the elderly.
             </p>
             <p>
               “We have a lot of children to take care of and nobody’s talking about that,” said Nan Astone, Urban Institute senior fellow. “Because the national debate about aging dominates the conversation, you’d think that the younger population was decreasing, but it’s not… and states will be increasingly strapped.”
             </p>
             <p>
-              The state and local picture is particularly important for the young population, Astone said, because <a href="http://www.urban.org/projects/kids_share.cfm">states spend more on children and youth than the federal government does</a>. States also pay for programs and services for the elderly. What’s more, in many commuting zones, the working-age population who pay the taxes necessary to invest in seniors and youth is growing slowly or declining, putting extreme pressure on government budgets.
+              The state and local picture is particularly important for the young population, Astone said, because <a target="_blank" href="http://www.urban.org/projects/kids_share.cfm">states spend more on children and youth than the federal government does</a>. States also pay for programs and services for the elderly. What’s more, in many commuting zones, the working-age population who pay the taxes necessary to invest in seniors and youth is growing slowly or declining, putting extreme pressure on government budgets.
             </p>
 
             <img data-src="images/ratios.png" class="plot-image img-responsive img-rounded async">
@@ -231,7 +231,7 @@
               “Generally speaking, we see that different populations live together in different household sizes and often have different levels of educational attainment. And, partly as a result of those things, they have different commuting patterns,” said Fulton, who also served as mayor of Ventura, California. “So, knowing the components of the population…is very valuable” for state and local governments.
             </p>
             <p>
-              The population nationwide is becoming <a href="http://www.urban.org/publications/2000066.html">more racially and ethnically diverse</a>—and that’s true in nearly every commuting zone.
+              The population nationwide is becoming <a target="_blank" href="http://www.urban.org/publications/2000066.html">more racially and ethnically diverse</a>—and that’s true in nearly every commuting zone.
             </p>
             <p>
               “Pretty much the entire United States is becoming at least a little less white,” Martin said. “Not only are white shares decreasing nationwide, but they are decreasing everywhere—in the Midwest and the Southeast, in big cities and in rural areas, in places where whites are leaving and in places where whites are moving to.”
@@ -276,7 +276,7 @@
               “Even so, Hispanic shares of the population will almost certainly grow in most places because of in-migration,” Martin said. “And because the Hispanic population is relatively young, it likely won’t experience high mortality rates until after 2030.”
             </p>
             <p>
-              What’s happening among the black population varies more by commuting zone. Blacks began leaving the South in the 1930s for urban centers in the North that offered greater economic opportunities—such as auto industry jobs in Detroit and Chicago—and more freedom from institutionalized violence, Pendall said. But as those industries declined, blacks began returning to the South—partly for jobs, but also to <a href="http://www.csmonitor.com/USA/Society/2014/0316/Why-African-Americans-are-moving-back-to-the-South">reconnect with family and cultural ties</a>.
+              What’s happening among the black population varies more by commuting zone. Blacks began leaving the South in the 1930s for urban centers in the North that offered greater economic opportunities—such as auto industry jobs in Detroit and Chicago—and more freedom from institutionalized violence, Pendall said. But as those industries declined, blacks began returning to the South—partly for jobs, but also to <a target="_blank" href="http://www.csmonitor.com/USA/Society/2014/0316/Why-African-Americans-are-moving-back-to-the-South">reconnect with family and cultural ties</a>.
             </p>
             <p>
               What’s more, in the South, blacks are projected to move out of rural areas and into more populous commuting zones. In the North, the reverse is happening, with blacks moving out of the most populous commuting zones and into more rural areas. Though the black population is still projected to grow overall in the North, the black <em>share</em> of the population is expected to shrink in large commuting zones like Chicago, New York, and Philadelphia.
