--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -41,14 +41,14 @@
     <div class="navbar-collapse collapse" id="briefs">
         <div class="container" id="hamburger-meat">
 
-            <div class="col-md-3 col-lg-3">
+            <div class="col-sm-3">
                 <h1 class="dropdown-section-header">BLOG POSTS</h1>
                 <hr/>
                 <a target="_blank" href="http://blog.metrotrends.org/2014/06/future-americas-young-population/">
                   The future of America’s young population
                 </a>
             </div>
-            <div class="col-md-6 col-lg-6">
+            <div class="col-sm-6">
                 <h1 class="dropdown-section-header">RESEARCH</h1>
                 <hr/>
                 <a target="_blank" href="http://www.urban.org/publications/2000065.html">
@@ -76,7 +76,7 @@
                 </a>
 
             </div>
-            <div class="col-md-3 col-lg-3">
+            <div class="col-sm-3">
                 <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
                 <hr/>
                 <a id="map" class="carousel-link">Tool: Population Projections</a>
